--- a/Email.Consumer/appsettings.json
+++ b/Email.Consumer/appsettings.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "SMTP": {
+    "Host": "smtp.example.com",
+    "Port": 587,
+    "EnableSsl": false,
+    "UserName": "your-username",
+    "Password": "{SMTP_PASSWORD}",
+    "From": "no-reply@example.com"
   }
 }
