refactor: Change RabbitMQ settings to appsettings

--- a/Email.Consumer/appsettings.json
+++ b/Email.Consumer/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "RabbitMQConnection": "amqp://guest:guest@localhost:5672"
+  },
   "SMTP": {
     "Host": "smtp.example.com",
     "Port": 587,
