--- a/Email.Producer/appsettings.json
+++ b/Email.Producer/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  
+  "ConnectionStrings": {
+    "RabbitMQConnection": "amqp://guest:guest@localhost:5672"
+  },
+
   "AllowedHosts": "*"
 }
