feat: implement Aspire to monitor services.

--- a/Email.Producer/Email.Producer.csproj
+++ b/Email.Producer/Email.Producer.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Email.Aspire\Email.Aspire.ServiceDefaults\Email.Aspire.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Email.Domain\Email.Domain.csproj" />
   </ItemGroup>
 
