--- a/Email.Consumer/Email.Consumer.csproj
+++ b/Email.Consumer/Email.Consumer.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Email.Aspire\Email.Aspire.ServiceDefaults\Email.Aspire.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Email.Domain\Email.Domain.csproj" />
   </ItemGroup>
 
